--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="unit_price_by_hour">元/小时</string>
     <string name="per_hour">/小时</string>
     <string name="unfold_view_all">展开查看全部</string>
+    <string name="put_way">收起</string>
     <string name="reload">重新加载</string>
     <string name="load_failed_tip">数据加载失败</string>
     <string name="empty_activity_tip">您还没有动态～</string>
