加载联系人到缓存失败的问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,7 +102,7 @@
     <string name="verity_code_countdown">%1$sS</string>
     <string name="verity_code_re_send">重新发送</string>
     <string name="pwd_hint">请输入6&#8211;16位密码</string>
-    <string name="register_protocol">《小教室用户注册协议》</string>
+    <string name="register_protocol">《小教室用户服务协议》</string>
     <string name="register_protocol_agree">点击注册默认您同意</string>
     <string name="name_empty">请输入姓名</string>
     <string name="name_length_less_than_2">请输入至少2个字的姓名</string>
