--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,15 +70,16 @@
     <string name="assistant_teacher">助教</string>
     <string name="cls_not_on_class_title">还未到上课时间，请耐心等待!</string>
     <string name="cls_not_on_class_desc">你现在可以和成员聊天，或者进行直播秀</string>
-    <string name="cls_not_break_title">课间休息!</string>
-    <string name="cls_not_break_desc">稍作休息，等待老师继续上课</string>
-    <string name="cls_not_break_desc_teacher">课间休息中，点击上课按钮继续上课</string>
+    <string name="cls_break_title">课间休息!</string>
+    <string name="cls_break_desc">稍作休息，等待老师继续上课</string>
+    <string name="cls_break_desc_teacher">课间休息中，点击上课按钮继续上课</string>
     <string name="cls_finish_title">本课已结束!</string>
     <string name="cls_not_connected">教室未连接上，请退出后重新进入</string>
     <string name="cls_pending_class_title">可以开始上课啦!</string>
     <string name="cls_pending_class_desc">点击上课按钮开始上课</string>
     <string name="cls_live_show">%1$s&#x0020;正在直播秀&#x0020;%2$s</string>
     <string name="cls_distance_class">距离上课还有%1$s</string>
+    <string name="cls_break_time_desc">课间休息&#x0020;%1$s</string>
 
     <string name="select_for_you">您已选:</string>
     <string name="search_subject_tips">请输入您要找的学科类目</string>
