--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="cls_live_show">%1$s&#x0020;正在直播秀&#x0020;%2$s</string>
     <string name="cls_distance_class">距离上课还有%1$s</string>
     <string name="cls_break_time_desc">课间休息&#x0020;%1$s</string>
+    <string name="cls_delay_time_desc">本课已延时&#x0020;%1$s</string>
 
     <string name="select_for_you">您已选:</string>
     <string name="search_subject_tips">请输入您要找的学科类目</string>
