--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,6 +215,7 @@
     <string name="cls_moment">班级圈</string>
     <string name="into_cls">进入教室</string>
     <string name="data_bank">资料库</string>
+    <string name="class_data_bank">班级资料库</string>
     <string name="data_bank_of_mine">我的资料库</string>
     <string name="more">更多</string>
     <string name="leave_lesson">退课</string>
@@ -722,6 +723,8 @@
     <string name="student">同学</string>
     <string name="search_empty_tips">暂无搜索结果~</string>
     <string name="stranger">陌生人</string>
+    <string name="class_data_tips">来源：个人或机构从自己的资料库里分享至班级</string>
+    <string name="delete_success">删除成功</string>
 
 
 </resources>
