--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="rename">重命名</string>
     <string name="all">全部</string>
     <string name="add">添加</string>
+    <string name="add_subject">没有我教的学科，立即添加</string>
     <string name="next">下一步</string>
     <string name="remark">备注</string>
     <string name="not_setting">未设置</string>
