--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -752,6 +752,7 @@
     <string name="shareok_and_to_class">分享成功，现在可以去班级中查看了</string>
     <string name="dont_go">暂时不去</string>
     <string name="go_class">去班级查看</string>
+    <string name="choice_all">全选</string>
 
 
 </resources>
