--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -756,6 +756,7 @@
     <string name="choice_all">全选</string>
     <string name="cancel_choice_all">取消全选</string>
     <string name="choose_material_tips">请选择要分享的资料</string>
+    <string name="shelves_ok">上架成功</string>
 
 
 </resources>
