首页框架调整完善工作，调整联系人、消息、个人主页入口以及对应功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,7 @@
     <string name="my_course_mine_page">我的课</string>
     <string name="my_teaching">我授的课</string>
     <string name="my_enrollment">我报的班</string>
+    <string name="my_contact">通讯录</string>
     <string name="my_ask_questions">我的提问</string>
     <string name="my_documents">资料库</string>
     <string name="my_collections">我的收藏</string>
