--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,7 +143,7 @@
     <string name="my_enrollment">我报的班</string>
     <string name="my_contact">通讯录</string>
     <string name="my_ask_questions">我的提问</string>
-    <string name="my_documents">资料库</string>
+    <string name="my_documents">我的资料库</string>
     <string name="my_collections">我的收藏</string>
     <string name="eval_management">评价管理</string>
     <string name="teach_ability">教学能力</string>
