--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -797,4 +797,6 @@
     <string name="open_class_time">开班日期</string>
     <string name="creator">创建者</string>
     <string name="class_info">班级信息</string>
+    <string name="client_download_qrcode">小教室下载二维码</string>
+    <string name="client_download_qrcode_tips">扫一扫二维码，即可下载小教室App</string>
 </resources>
