--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -479,6 +479,8 @@
     <string name="cr_room_numbers">班级成员名单(<![CDATA[<font color="#ff9833">%1$d</font>]]>/%2$d)</string>
     <string name="cr_manage_contact">管理成员</string>
     <string name="cr_talk_discussion">教室交流</string>
+    <string name="cr_save_edit">保存图片编辑</string>
+    <string name="cr_save_edit_desc">是否保存对当前图片的编辑?</string>
 
     <!-- 社交-->
     <string name="contact">联系人</string>
