--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -800,4 +800,5 @@
     <string name="client_download_qrcode">小教室下载二维码</string>
     <string name="client_download_qrcode_tips">扫一扫二维码，即可下载小教室App</string>
     <string name="gradle">班</string>
+    <string name="hint_input_class_name">请输入班级名称</string>
 </resources>
