--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -804,4 +804,5 @@
     <string name="hint_input_lesson_name">请输入公开课名称</string>
     <string name="empty_class_tips">你还没开过班哦～</string>
     <string name="want_to_create_class">我要开班</string>
+    <string name="into_cls_flag">进入教室 ></string>
 </resources>
