教室，个人推流结束后，可以再次点击推流按钮继续推流

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -481,6 +481,7 @@
     <string name="cr_talk_discussion">教室交流</string>
     <string name="cr_save_edit">保存图片编辑</string>
     <string name="cr_save_edit_desc">是否保存对当前图片的编辑?</string>
+    <string name="cr_individual_end">直播秀已结束，点击播放按钮可再次直播秀</string>
 
     <!-- 社交-->
     <string name="contact">联系人</string>
