Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -852,5 +852,6 @@
     <string name="create_class_success">创建班成功</string>
     <string name="class_name_not_null">班级名称不能为空</string>
     <string name="class_name_char_error">课名称不能超过%1$d个字</string>
+    <string name="clesson_time_has_conflict">时间有冲突，请修改上课时间！</string>
 
 </resources>
