Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,7 +153,7 @@
     <string name="personal_home">个人主页</string>
     <string name="my_page">我的主页</string>
     <string name="my_course_mine_page">我的课</string>
-    <string name="my_teaching">我授的课</string>
+    <string name="my_teaching">我的班课</string>
     <string name="my_enrollment">我报的班</string>
     <string name="my_contact">通讯录</string>
     <string name="my_ask_questions">我的提问</string>
