--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -869,5 +869,7 @@
     <string name="enroll_result_ok_tips">现在你可以进入教室体验，与老师、同学们进行互动，也可以进行直播哦～</string>
     <string name="look_class_lesson">查看我的班课</string>
     <string name="want_to_learn_num">%1$d人学</string>
+    <string name="save_picture_ok_tips">图片已保存在：%1$s/%2$s</string>
+    <string name="save_picture_error_tips">保存失败</string>
 
 </resources>
