--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -891,6 +891,6 @@
     <string name="overlay_import_tips">从班级中导入的学生将被覆盖，确定要继续吗？</string>
     <string name="go_on">继续</string>
     <string name="class_lesson_duration_must_be_more_than">上课时长不能小于%1$s分钟</string>
-    <string name="import_class_student_tips">只导入选择班级中的学生，且会自动排除重复的学生</string>
+    <string name="import_class_student_tips">只导入选择班／公开课中的学生，且会自动排除重复的学生</string>
 
 </resources>
