--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -843,7 +843,7 @@
     <string name="lesson_op_private">取消公开</string>
     <string name="lesson_op_recreate_lesson">再次开课</string>
     <string name="lesson_op_share">分享</string>
-    <string name="lesson_op_cancel_lesson">取消开课</string>
+    <string name="lesson_op_cancel_lesson">取消</string>
     <string name="lesson_op_submit">提交确认</string>
     <string name="lesson_op_publish">上架</string>
     <string name="lesson_op_edit">编辑</string>
