--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -499,6 +499,7 @@
     <string name="cr_save_edit_desc">是否保存对当前图片的编辑?</string>
     <string name="cr_individual_end">直播秀已结束，点击播放按钮可再次直播秀</string>
     <string name="cr_connecting">教室正在连接中，请稍后...</string>
+    <string name="cr_peer_live_occupy_tips">你正在和%1$s进行一对一视频，不能和其他学生视频</string>
 
     <!-- 社交-->
     <string name="contact">联系人</string>
