--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -908,5 +908,10 @@
     <string name="offline_peer_to_peer_tips">该学生已下线，不能1对1视频哦～</string>
     <string name="upload_support_error_tips">暂不支持此文件格式,目前只支持上传图片、PPT、视频文件</string>
     <string name="live_occur_exception">抱歉，直播出现异常</string>
+    <string name="teacher">老师</string>
+    <string name="manager_session">机构管理</string>
+    <string name="admin_session">管理员</string>
+    <string name="auditor_session">旁听</string>
+    <string name="remote_assistant_session">远程助教</string>
 
 </resources>
