--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -796,7 +796,7 @@
     <string name="patch_share_material">批量分享资料</string>
     <string name="go_on_share_material">继续分享</string>
     <string name="query_go_on_share_when_confilc">以下资料在该班级中已存在，是否继续分享？</string>
-    <string name="Invalid_calss_qrcode_tips">无效的教室二维码，请扫描正确的教室二维码</string>
+    <string name="Invalid_calss_qrcode_tips">未能识别图中的二维码</string>
 
     <!--班-->
     <string name="create_class">开班</string>
