--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -455,8 +455,8 @@
     <string name="send_to_discussion">发送到交流群</string>
     <string name="confirm_share">确认分享</string>
     <string name="share_target_empty">联系人为空</string>
-    <string name="open_camera_tips">打开摄像头</string>
-    <string name="agree_open_camera">是否同意老师打开摄像头?</string>
+    <string name="open_camera_tips">音视频调用申请</string>
+    <string name="agree_open_camera">主讲老师申请打开你的音视频，确认后你的音视频将对老师公开，请确认！</string>
     <string name="video_loading">视频正在加载中...</string>
     <string name="save_edit_video_succ">保存到资料库成功</string>
     <string name="save_edit_video_fail">保存到资料库失败</string>
