--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -942,5 +942,6 @@
     <string name="exit_with_finish">完成并退出</string>
     <string name="cant_join_yourself_class">不能加入自己创建的班</string>
     <string name="go_to_authorization">去授权</string>
+    <string name="captcha_send_success">发送成功</string>
 
 </resources>
